<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Baking Time</string>
    <string name="msg_retrieving_data">Getting Information</string>
    <string name="msg_offline">Offline</string>
    <string name="recipe_picture_desc">A picture of the recipe</string>
    <plurals name="number_of_servings">
        <item quantity="one">%1$d serving</item>
        <item quantity="other">%1$d servings</item>
    </plurals>
    <string name="msg_cant_offline">You must be online, to be able to use this application!</string>
    <string name="msg_ok">OK</string>
    <string name="msg_close">Close</string>
    <string name="title_recipeinfo">Recipe Information</string>
    <string name="title_recipeinfo_step">Recipe Info Step</string>
    <string name="title_recipeinfo_ingredients">Recipe Info Ingredients</string>
    <plurals name="recipe_ingredients">
        <item quantity="one">%1$d Recipe Ingredient</item>
        <item quantity="other">%1$d Recipe Ingredients</item>
    </plurals>
    <string name="step_number_info">Step: %s</string>
    <string name="msg_err_fetching_recipes">An error has occurred while retrieving the recipes.</string>
    <string name="msg_err_occurred">An error has occurred.</string>
    <string name="ingredient_detail">%1$.1f %2$s of %3$s</string>
    <string name="default_video_thumbnail_desc">Default thumbnail image, for when there is no video or thumbnail image available.</string>

    // Video Player error messages ...
    <string name="msg_err_querying_decoders">Unable to query device decoders.</string>
    <string name="msg_err_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="msg_err_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="msg_err_instantiate_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="notify_channel_name">Baking Time Notification Channel</string>
    <string name="notify_channel_desc">The notification channel that is used by the Baking Time app</string>

    <string name="appwidget_desc_title">The Baking Time app widget</string>
    <string name="appwidget_desc_card">The recipe name</string>
    <string name="appwidget_desc_recipe_title">The title of the recipe</string>
    <string name="appwidget_desc_recipe_image">A picture of the recipe</string>
    <string name="appwidget_desc_recipe_text">The recipe ingredients</string>

</resources>
