<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appwidget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_title"
        android:text="@string/app_name"
        android:textColor="@color/cardview_dark_background"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="0dp"
        android:textAlignment="center"
        android:paddingTop="@dimen/margin_medium"
        android:contentDescription="@string/appwidget_desc_title"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        />

    <ImageView
        android:id="@+id/appwidget_recipe_image"
        android:background="#ffffffff"
        android:layout_below="@id/appwidget_title"
        android:layout_alignParentStart="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="@dimen/margin_medium"
        android:contentDescription="@string/appwidget_desc_recipe_image"
        android:src="@drawable/ic_baseline_fastfood_24px"
        />

    <TextView
        android:id="@+id/appwidget_recipe_title"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:textColor="@color/cardview_dark_background"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/appwidget_title"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/appwidget_recipe_image"
        android:gravity="center_vertical|start"
        android:padding="@dimen/margin_medium"
        android:contentDescription="@string/appwidget_desc_recipe_title" />

    <TextView
        android:id="@+id/appwidget_recipe_text"
        android:textColor="@color/cardview_dark_background"
        android:background="#ffffffff"
        android:layout_below="@id/appwidget_recipe_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:padding="@dimen/margin_medium"
        android:contentDescription="@string/appwidget_desc_recipe_text"
        />

</RelativeLayout>